--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />
     <link rel="manifest" href="favicon/site.webmanifest" />
 
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
 
   <body>
